<resources>
    <string name="app_name">Good Food</string>
    <string name="auth_conditions">Авторизуясь я соглашаюсь с <u>условиями использования</u></string>
    <string name="title_first_part">online</string>
    <string name="title_second_part">SWIFTBOOK</string>
    <string name="selected_items">Корзина</string>
    <string name="comment_order">Комментарий</string>
    <string name="comment_write">Укажите дополнительную информацию \nк заказу</string>
    <string name="service">Дополнительно</string>
    <string name="service_pickup">Самовывоз</string>
    <string name="service_payment_card">Оплата картой</string>
    <string name="service_payment_cash">Оплата наличными</string>
    <string name="order_complete">ЗАКАЗАТЬ</string>
    <string name="dish_title">Том Ям суп с морепродуктами \nмидии и креветки</string>
    <string name="dish_description">Бульон из пряного говяжьего мясного супа с кокосовым молоком,
        грибами, томатами, зеленью. Подается с добавками на выбор, отварным белым рисом или
        рисовой вермишелью на выбор</string>
</resources>