<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/svRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvTitleFirstPart"
            style="@style/title_text_first"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:shadowColor="@color/shadow_color"
            android:shadowDx="1"
            android:shadowDy="2"
            android:shadowRadius="3"
            android:text="@string/title_first_part"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvTitleSecondPart"
            style="@style/title_text_second"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:shadowColor="@color/shadow_color"
            android:shadowDx="1"
            android:shadowDy="3"
            android:shadowRadius="4"
            android:text="@string/title_second_part"
            android:textColor="@color/shadow_color"
            app:layout_constraintStart_toStartOf="@id/tvTitleFirstPart"
            app:layout_constraintTop_toBottomOf="@id/tvTitleFirstPart" />

        <ImageView
            android:id="@+id/ivCircle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/shape_circle"
            app:layout_constraintStart_toEndOf="@id/tvTitleSecondPart"
            app:layout_constraintTop_toTopOf="@id/tvTitleFirstPart" />

        <ImageView
            android:id="@+id/ivCircleButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:src="@drawable/ic_close_button"
            app:layout_constraintBottom_toBottomOf="@+id/tvTitleSecondPart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/ivCircle" />

        <TextView
            android:id="@+id/tvSecondTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="44dp"
            android:text="@string/selected_items"
            android:textColor="@color/black"
            android:textSize="26sp"
            app:layout_constraintStart_toStartOf="@id/tvTitleSecondPart"
            app:layout_constraintTop_toBottomOf="@id/tvTitleSecondPart" />

        <TextView
            android:id="@+id/tvPhoneNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="PHONE NUMBER:"
            android:textColor="@color/black"
            android:textSize="10sp"
            app:layout_constraintStart_toStartOf="@+id/tvSecondTitle"
            app:layout_constraintTop_toBottomOf="@+id/tvSecondTitle" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clFirstDish"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/decoration_rounded_shadowed_16"
            android:elevation="6dp"
            android:translationZ="4dp"
            app:layout_constraintTop_toBottomOf="@id/tvSecondTitle">

            <ImageView
                android:id="@+id/ivFirstDishPhoto"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:src="@drawable/drawable_first_dish"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvFirstDishName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="Том Ям суп с морепродуктами"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintBottom_toTopOf="@+id/tvFirstDishCount"
                app:layout_constraintEnd_toEndOf="@+id/tvFistDishPrice"
                app:layout_constraintStart_toEndOf="@id/ivFirstDishPhoto"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="spread" />

            <TextView
                android:id="@+id/tvFirstDishCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Количество: 2 шт"
                android:textColor="@color/black"
                android:textSize="13sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@id/tvFirstDishName"
                app:layout_constraintTop_toBottomOf="@+id/tvFirstDishName" />

            <TextView
                android:id="@+id/tvFistDishPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/decoration_background_filled_rounded_8"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:text="470 ₽"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:layout_constraintBaseline_toBaselineOf="@id/tvFirstDishCount"
                app:layout_constraintEnd_toStartOf="@id/ivFirstDishCloseButton" />

            <ImageView
                android:id="@+id/ivFirstDishCloseButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="14dp"
                android:src="@drawable/ic_close_button"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/tint_color" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clSecondDish"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/decoration_rounded_shadowed_16"
            android:elevation="6dp"
            android:translationZ="4dp"
            app:layout_constraintTop_toBottomOf="@id/clFirstDish">

            <ImageView
                android:id="@+id/ivSecondDishPhoto"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:src="@drawable/drawable_second_dish"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvSecondDishName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="Сет Запеченая филадельфия Party De Luxe"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintBottom_toTopOf="@+id/tvSecondDishCount"
                app:layout_constraintEnd_toEndOf="@+id/tvSecondDishPrice"
                app:layout_constraintStart_toEndOf="@id/ivSecondDishPhoto"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="spread" />

            <TextView
                android:id="@+id/tvSecondDishCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Кол-во: 1 шт"
                android:textColor="@color/black"
                android:textSize="13sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@id/tvSecondDishName"
                app:layout_constraintTop_toBottomOf="@+id/tvSecondDishName" />

            <TextView
                android:id="@+id/tvSecondDishPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/decoration_background_filled_rounded_8"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:text="115 ₽"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:layout_constraintBaseline_toBaselineOf="@id/tvSecondDishCount"
                app:layout_constraintEnd_toStartOf="@id/ivSecondDishCloseButton" />

            <ImageView
                android:id="@+id/ivSecondDishCloseButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="14dp"
                android:src="@drawable/ic_close_button"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/tint_color" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clThirdDish"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/decoration_rounded_shadowed_16"
            android:elevation="6dp"
            android:translationZ="4dp"
            app:layout_constraintTop_toBottomOf="@id/clSecondDish">

            <ImageView
                android:id="@+id/ivThirdDishPhoto"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:src="@drawable/drawable_third_dish"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvThirdDishName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="Десерт круассан с грецкими"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintBottom_toTopOf="@+id/tvThirdDishCount"
                app:layout_constraintEnd_toEndOf="@+id/tvThirdDishPrice"
                app:layout_constraintStart_toEndOf="@id/ivThirdDishPhoto"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="spread" />

            <TextView
                android:id="@+id/tvThirdDishCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Кол-во: 1 шт"
                android:textColor="@color/black"
                android:textSize="13sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@id/tvThirdDishName"
                app:layout_constraintTop_toBottomOf="@+id/tvThirdDishName" />

            <TextView
                android:id="@+id/tvThirdDishPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/decoration_background_filled_rounded_8"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:text="115 ₽"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:layout_constraintBaseline_toBaselineOf="@id/tvThirdDishCount"
                app:layout_constraintEnd_toStartOf="@id/ivThirdDishCloseButton" />

            <ImageView
                android:id="@+id/ivThirdDishCloseButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="14dp"
                android:src="@drawable/ic_close_button"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/tint_color" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/tvComments"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="48dp"
            android:text="@string/comment_order"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/clThirdDish" />

        <EditText
            android:id="@+id/etCommentField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/decoration_rounded_4"
            android:gravity="top"
            android:hint="@string/comment_write"
            android:minLines="10"
            android:paddingLeft="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvComments" />

        <TextView
            android:id="@+id/tvLinesEndCommentField"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etCommentField" />

        <TextView
            android:id="@+id/tvAdditionally"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="48dp"
            android:text="@string/service"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvLinesEndCommentField" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/scPickUpService"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:text="@string/service_pickup"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvAdditionally" />

        <RadioGroup
            android:id="@+id/rgPaymentMethods"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/scPickUpService">

            <RadioButton
                android:id="@+id/rbCashPayment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="1dp"
                android:layout_marginEnd="16dp"
                android:layoutDirection="rtl"
                android:text="@string/service_payment_card"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@+id/scPickUpService" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="1dp"
                android:layout_marginEnd="16dp"
                android:layoutDirection="rtl"
                android:text="@string/service_payment_cash"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@+id/rbCashPayment" />
        </RadioGroup>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="49dp"
            android:layout_marginBottom="23dp"
            android:background="@color/button_color"
            android:paddingLeft="70dp"
            android:paddingTop="16dp"
            android:paddingRight="70dp"
            android:paddingBottom="16dp"
            android:text="@string/order_complete"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rgPaymentMethods" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>